--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-paper": "^4.11.2",
+    "react-native-web": "0.17.1",
+    "expo-keep-awake":  "~8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
