--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "expo": "~44.0.0",
+    "expo-cli": "^5.2.0",
     "expo-keep-awake": "~10.0.2",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
